add total lots calculation based on car park type and decks; update availability handling